NYCCHKBK-6856: Fixed Theming issue: Details page static content should be aligned with title

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -2240,6 +2240,7 @@ table#assoc_contracts_list .assoc_item .rfed-amount {
 }
 .contract-id,
 .inside .contract-details-heading,
+.page-revenue #revenue-transactions .inside .panel-pane.pane-custom.pane-2,
 .page-budget .inside .panel-pane.pane-custom.pane-2,
 .expense_category_budget_details .panel-pane.pane-custom.pane-1
 {
@@ -2640,6 +2641,7 @@ table#assoc_contracts_list.oge-assoc-contracts-list .assoc_item .contract-title 
 .inside .transactions-container
 .contract_transactions,
 #nyc-expense-pending-contracts .omega-12-twocol-3-9 .inside .contract-details-heading,
+.page-revenue #revenue-transactions .inside .panel-pane.pane-custom.pane-2,
 .page-budget .inside .panel-pane.pane-custom.pane-2,
 .expense_category_budget_details .panel-pane.pane-custom.pane-1{
     width:420px;
@@ -2659,19 +2661,18 @@ h1.no-spending-transactions {width: 500px}
     float:left !important;
     width:50% !important;
 }
-.page-revenue .inside .panel-pane.pane-custom.pane-2.noDataShowFull,
+.page-revenue #revenue-transactions .inside .panel-pane.pane-custom.pane-2.noDataShowFull,
 .page-budget .inside .panel-pane.pane-custom.pane-2.noDataShowFull{
     width:100% !important;
     float:none !important;
 }
-.page-revenue .inside .panel-pane.pane-custom.pane-2.noDataShowFull #no-records,
+.page-revenue #revenue-transactions .inside .panel-pane.pane-custom.pane-2.noDataShowFull #no-records,
 .page-budget .inside .panel-pane.pane-custom.pane-2.noDataShowFull #no-records{
     text-align:center;
     float:left;
     clear:both;
     width:100%;
 }
-
 .revenue-no-records {
     width:100% !important;
 }
